--- a/Client/src/app/pages/decision-maker-queries/chief-librarian/chief-librarian.component.html
+++ b/Client/src/app/pages/decision-maker-queries/chief-librarian/chief-librarian.component.html
@@ -91,11 +91,11 @@
       <!-- End of GetPopularBooksByMonth -->
     </div>
     <div class="row">
-      <!-- Query2 -->
+      <!-- getBooksReturnedLate -->
       <div class="col-lg-12">
         <mat-card class="b-1 shadow-none">
           <mat-card-header>
-            <mat-card-title>Query2</mat-card-title>
+            <mat-card-title>Books often returned late</mat-card-title>
           </mat-card-header>
           <mat-card-content class="b-t-1">
             <div class="row">
@@ -103,14 +103,15 @@
                 <div class="row" style="justify-content: space-around">
                   <div class="col-md-6 col-sm-12">
                     <mat-form-field class="w-100" appearance="outline">
-                      <mat-label>Course ID</mat-label>
-                      <input matInput type="number" [formControl]="courseId" required />
+                      <mat-label>Records to fetch</mat-label>
+                      <input matInput type="number" [formControl]="fetchnum1" required />
                     </mat-form-field>
                   </div>
                   <div class="col-md-6 col-sm-12">
                     <mat-form-field class="w-100" appearance="outline">
-                      <mat-label>Records to fetch</mat-label>
-                      <input matInput type="number" [formControl]="fetchnum" required />
+                      <mat-label>Value</mat-label>
+                      <input matInput type="number" [formControl]="value1" required />
+                      <mat-hint>E.G. 28 for week 28</mat-hint>
                     </mat-form-field>
                   </div>
                 </div>
@@ -118,22 +119,13 @@
                   <div class="col-md-6 col-sm-12">
                     <mat-form-field class="w-100" appearance="outline">
                       <mat-label>Year</mat-label>
-                      <input matInput type="number" [formControl]="year" required />
+                      <input matInput type="number" [formControl]="year1" required />
                     </mat-form-field>
                   </div>
-                  <div class="col-md-6 col-sm-12">
-                    <mat-form-field class="w-100" appearance="outline">
-                      <mat-label>Value</mat-label>
-                      <input matInput type="number" [formControl]="value" required />
-                      <mat-hint>E.G. 28 for week 28</mat-hint>
-                    </mat-form-field>
-                  </div>
-                </div>
-                <div class="row">
                   <div class="col-md-6 col-sm-12">
                     <mat-form-field>
                       <mat-label>Operator</mat-label>
-                      <mat-select [(ngModel)]="timeframe" required>
+                      <mat-select [(ngModel)]="timeframe1" required>
                         <mat-option value="Year">Year</mat-option>
                         <mat-option value="Quarter">Quarter</mat-option>
                         <mat-option value="Month">Month</mat-option>
@@ -143,46 +135,34 @@
                   </div>
                 </div>
                 <div class="row">
-                  <button mat-flat-button color="warn" (click)="resetQuery2()">Clear</button>
-                  <button mat-flat-button color="primary" (click)="callQuery2()">Get Report</button>
+                  <button mat-flat-button color="warn" (click)="resetgetBooksReturnedLate()">Clear</button>
+                  <button mat-flat-button color="primary" (click)="callgetBooksReturnedLate()">Get Report</button>
                 </div>
               </div>
               <div class="col-lg-7">
                 <!-- Results Table -->
-                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-                  <!-- Book Title Column -->
+                <table mat-table [dataSource]="dataSource1" class="mat-elevation-z8">
                   <ng-container matColumnDef="title">
                     <th mat-header-cell *matHeaderCellDef>Book Title</th>
                     <td mat-cell *matCellDef="let element">{{ element.TITLE }}</td>
                   </ng-container>
-
-                  <!-- Author Column -->
                   <ng-container matColumnDef="author">
                     <th mat-header-cell *matHeaderCellDef>Author</th>
                     <td mat-cell *matCellDef="let element">{{ element.AUTHOR }}</td>
                   </ng-container>
-
-                  <!-- loans Column -->
-                  <ng-container matColumnDef="loans">
-                    <th mat-header-cell *matHeaderCellDef># of loans</th>
-                    <td mat-cell *matCellDef="let element">{{ element.NUMBER_OF_LOANS }}</td>
+                  <ng-container matColumnDef="late">
+                    <th mat-header-cell *matHeaderCellDef>Late returns</th>
+                    <td mat-cell *matCellDef="let element">{{ element.NUMBER_OF_LATE_RETURNS }}</td>
                   </ng-container>
-
-                  <!-- fines Column -->
-                  <ng-container matColumnDef="fines">
-                    <th mat-header-cell *matHeaderCellDef># of fines</th>
-                    <td mat-cell *matCellDef="let element">{{ element.NUMBER_OF_FINES }}</td>
-                  </ng-container>
-
-                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns1"></tr>
                 </table>
               </div>
             </div>
           </mat-card-content>
         </mat-card>
       </div>
-      <!-- End of Query2 -->
+      <!-- End of getBooksReturnedLate -->
     </div>
   </mat-card-content>
 </mat-card>
